# python-dictionary-search

./: .envrc  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg
.github/workflows/: upload-pypi.yml
dictionary_search/: __init__.py  search.py  structural.py
examples/: example.py
tests/: test_search_all.py  test_search_one.py
tests/structural/: test_flat.py  test_nest.py
