[metadata]
name = dictionary-search
description = Small dictionary search utils
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
author = Daniel Garcia / Cesar Gallego
maintainer = Daniel Garcia (cr0hn)
maintainer_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/python-dictionary-search

[options]
zip_safe = True
include_package_data = True
packages = find:
